[package]
description = "A terminal analog clock."
license = "MIT"
name = "analog-clock"
version = "0.1.4"
edition = "2018"
repository = "https://github.com/wongjiahau/analog-clock/tree/master"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_size = "0.3.2"
colored = "2"
chrono = "0.4.0"
bresenham = "0.1.1"
image = "0.23.14"
line_drawing = "1.0.0"
colors-transform = "0.2.11"
structopt = "0.3.25"
crossterm = "0.22.1"
